2004-10-25  Ben Elliston  <bje@gnu.org>

	Reported by Monty Solomon <monty@roscom.com>:
	* config.guess (*:XENIX:*:SysV): New.
	* testsuite/config-guess.data: Add a test case.

2004-10-25  Ben Elliston  <bje@gnu.org>

	Reported by Martin Hammer <martin.hammer@siemens.com>:
	* config.guess (DRS?6000:isis:4.2*:7*): New pattern.

2004-09-07  Ben Elliston  <bje@gnu.org>

	* config.guess (frv:Linux:*:*): New.
	* testsuite/config-sub.data: Add cris-linux, frv-linux.
	* testsuite/config-guess.data: Add frv-linux-unknown-gnu case.

2004-08-27  Hans-Peter Nilsson  <hp@axis.com>

	* config.sub: Handle crisv32, alias etraxfs.
	* config.guess (crisv32:Linux:*:*): Handle.
	* testsuite/config-sub.data: Add test case.
	* testsuite/config-guess.data: Likewise.

2004-08-22  Ben Elliston  <bje@gnu.org>

	* Makefile (check): Run config-guess.sh tests as well.
	* testsuite/config-guess.sh: New test.
	* testsuite/config-guess.data: New file.
	* testsuite/uname.in: Likewise.
	* testsuite/config-sub.data (amd64-unknown-freebsd5.2): New case.

2004-08-13  Brad Smith  <brad@comstyle.com>

	* config.guess (*:OpenBSD:*:*): Remove defunct MIPS machines.
	(sgi:OpenBSD:*:*): Emit mips64, not mipseb.

2004-08-11  Paul Eggert  <eggert@cs.ucla.edu>

	* config.guess (*:Darwin:*:*): If uname -p reports "unknown",
	assume the processor is a powerpc.  This is because coreutils
	uname (at least versions 4.5.7 through 5.2.1) outputs "unknown"
	in this case, due to a MacOS X bug that causes
	sysctl ((int[]) {CTL_HW, HW_MACHINE_ARCH}, 2, buffer, &bufsize, 0, 0)
	to return a negative number.
	Problem reported by Petter Reinholdtsen in:
	http://lists.gnu.org/archive/html/bug-gnu-utils/2003-02/msg00201.html

2004-07-19  Ben Elliston  <bje@gnu.org>

	* config.guess (S7501:*:4.0:3.0): Handle NCR System V UNIX machine.

2004-07-02  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Add i386-elf to i786-elf.

2004-06-30  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Add more new tests.
